...
            android:background="@drawable/homepage_button"
            android:textColor="@color/textHomepageButtons"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/fileDialog_loadBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Load"
            android:textAllCaps="false"
            android:background="@drawable/homepage_button"
            android:textColor="@color/textHomepageButtons"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textStyle="bold" />
...
