...
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left">
            <Button
                android:id="@+id/filesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/homepage_button"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="Files / Load Structure"
                android:textAllCaps="false"
                android:textColor="@color/textHomepageButtons"
                android:textSize="20sp"
                android:textStyle="bold" />
            </TableRow>
<!--            <TableRow-->
...
