<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/files_fragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ui.Files"
    android:background="@color/backgroundRed"
    android:clickable="true">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filesRecycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/files_view"
            />

        </ScrollView>
</RelativeLayout>
